# TileGraphAgent

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.ifc  Guide.md  Landingpage.md  Makefile  MasterPrompt.md  Neo4j-cert.txt  README.md  architecture.md  docker-compose.yml  package.json  plan.md  verify.md
.github/workflows/: ci.yml
apps/tilegraph-mcp-server/: README.md  package.json
apps/tilegraph-mcp-server/src/: config.ts  index.ts
apps/tilegraph-mcp-server/src/agent/: claude_agent.ts
apps/tilegraph-mcp-server/src/audit/: logger.ts
apps/tilegraph-mcp-server/src/db/: neo4j.ts
apps/tilegraph-mcp-server/src/resources/: index.ts
apps/tilegraph-mcp-server/src/schemas/: validation.ts
apps/tilegraph-mcp-server/src/spatial/: index.ts
apps/tilegraph-mcp-server/src/tests/: audit_logger.test.ts  validation.test.ts
apps/tilegraph-mcp-server/src/tools/: create_issue_from_selection.ts  focus_camera_on_objects.ts  generate_maintenance_context.ts  get_object_properties.ts  get_tile_feature_mapping.ts  highlight_objects_in_viewer.ts  index.ts  isolate_system_in_viewer.ts  query_connected_components.ts  query_nearby_objects.ts  query_objects_in_area.ts  query_upstream_downstream.ts  search_object_by_tag.ts
apps/tilegraph-mcp-server/src/viewer/: bridge.ts
apps/tilegraph-mcp-server/tests/integration/: mock_neo4j.ts
apps/tilegraph-viewer/: README.md  index.html  vite.config.ts
apps/tilegraph-viewer/src/: main.ts
apps/tilegraph-viewer/src/agent/: claude_client.ts  ws_client.ts
apps/tilegraph-viewer/src/ui/: properties_panel.ts
apps/tilegraph-viewer/src/viewer/: cesium_init.ts
apps/tilegraphmcp/: .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
apps/tilegraphmcp/src/: index.ts  worker.ts
apps/tilegraphmcp/src/agent/: claude_agent.ts
apps/tilegraphmcp/src/audit/: logger.ts  r2_logger.ts
apps/tilegraphmcp/src/db/: neo4j.ts  neo4j_http.ts
apps/tilegraphmcp/src/schemas/: objects.ts
apps/tilegraphmcp/src/spatial/: r2_client.ts
apps/tilegraphmcp/src/tools/: create_issue_from_selection.ts  focus_camera_on_objects.ts  get_object_properties.ts  highlight_objects_in_viewer.ts  index.ts  query_upstream_downstream.ts
apps/tilegraphmcp/src/viewer/: viewer_hub.ts
apps/tilegraphmcp/tests/integration/: tool_chain.test.ts
apps/tilegraphviewer/: README.md  package.json
apps/tilegraphviewer/src/: main.ts
apps/tilegraphviewer/src/agent/: ws_client.ts
apps/tilegraphviewer/src/ui/: model_tree.ts  properties_panel.ts
config/: pipeline.toml
crates/tilegraph-cli/: Cargo.toml
crates/tilegraph-cli/src/: main.rs
crates/tilegraph-cli/src/commands/: benchmark.rs  build_graph.rs  build_tiles.rs  generate_synth.rs  inspect_object.rs  mod.rs  validate.rs
crates/tilegraph-cli/tests/: pipeline_integration.rs  snapshot_tests.rs
crates/tilegraph-core/: Cargo.toml
crates/tilegraph-core/src/: bounding_volume.rs  config.rs  error.rs  feature.rs  graph.rs  id.rs  lib.rs  manifest.rs  object.rs  tile.rs  transform.rs
crates/tilegraph-geometry/: Cargo.toml
crates/tilegraph-geometry/src/: group.rs  instance.rs  lib.rs  material.rs  mesh.rs  primitives.rs  traits.rs
crates/tilegraph-gltf/: Cargo.toml
crates/tilegraph-gltf/src/: builder.rs  feature_id.rs  lib.rs  schema.rs  structural_metadata.rs  traits.rs  validate.rs  writer.rs
crates/tilegraph-graph-export/: Cargo.toml
crates/tilegraph-graph-export/src/: csv_export.rs  cypher.rs  lib.rs  neo4j_client.rs  schema.rs  traits.rs  validate.rs
crates/tilegraph-ifc-bridge/: Cargo.toml  build.rs
crates/tilegraph-ifc-bridge/src/: ffi.rs  lib.rs  tessellator.rs
crates/tilegraph-ingest/: Cargo.toml
crates/tilegraph-ingest/src/: adapter.rs  ifc_adapter.rs  ifc_stub.rs  lib.rs  scene.rs  synth_adapter.rs
crates/tilegraph-spatial/: Cargo.toml
crates/tilegraph-spatial/src/: index.rs  lib.rs  query.rs  record.rs  serialize.rs  traits.rs
crates/tilegraph-synth/: Cargo.toml
crates/tilegraph-synth/src/: config.rs  connections.rs  generator.rs  lib.rs  primitives.rs  tag.rs  validate.rs
crates/tilegraph-tiles/: Cargo.toml
crates/tilegraph-tiles/src/: builder.rs  geometric_error.rs  lib.rs  lod.rs  schema.rs  traits.rs  validate.rs  writer.rs
data/synth/: plant_spec.json
docs/ai-workflow/: AI_VERIFICATION.md
docs/architecture/: demo_scenario.md
docs/mcp/: agent_system_prompt.md
memory/: MEMORY.md  project_tilegraph.md
output/: .build_manifest.json
output/reports/: validation_report.json
output/synth/: datasheets.json  objects.json
output/tiles/: tileset.json
output/tiles/index/: spatial_index.json
output/tiles/metadata/: object_properties.json  tile_feature_map.json
prompts/: Prompt1_pipeline_correctness.md  Prompt2_EXT_structural_metadata.md  Prompt3_viewer_core_features.md  Prompt4_MCP_server_hardening.md  Prompt5_agent_chat_integration.md  Prompt6_LOD_and_instancing.md  Prompt7_IFC_adapter.md  Prompt8_pipeline_hardening.md  Prompt9_CI_CD_observability.md  README.md  results.md
scripts/: update_snapshots.sh
tests/snapshots/: p10101_tag.txt
