[workspace]
resolver = "2"
members = [
    "crates/tilegraph-core",
    "crates/tilegraph-synth",
    "crates/tilegraph-ingest",
    "crates/tilegraph-geometry",
    "crates/tilegraph-gltf",
    "crates/tilegraph-tiles",
    "crates/tilegraph-spatial",
    "crates/tilegraph-graph-export",
    "crates/tilegraph-cli",
    "crates/tilegraph-ifc-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Thanh Hoang-Minh"]
license = "MIT"
repository = "https://github.com/hmthanhgm/TileGraphAgent"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Math / geometry
glam = { version = "0.29", features = ["serde"] }

# Spatial indexing
rstar = { version = "0.12", features = ["serde"] }

# UUID / IDs
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# File I/O
walkdir = "2"

# Hashing
sha2 = "0.10"
hex = "0.4"

# TOML config
toml = "0.8"

# Parallel processing
rayon = "1"

# Async runtime (for graph export HTTP calls)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Testing
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
