[package]
name = "tilegraph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared domain model, IDs, transforms, bounding volumes, and error types for TileGraphAgent"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
