[package]
name = "tilegraph-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mesh generation from industrial primitives, instance grouping, material strategy"

[dependencies]
tilegraph-core = { path = "../tilegraph-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
