[package]
name = "tilegraph-tiles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "3D Tiles 1.1 tileset.json generation, bounding volumes, geometric error estimation"

[dependencies]
tilegraph-core = { path = "../tilegraph-core" }
tilegraph-geometry = { path = "../tilegraph-geometry" }
tilegraph-gltf = { path = "../tilegraph-gltf" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
